# Transaction-information-collection

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: candidate-sources.md  compliance-checklist.md  data-dictionary.md  default-configuration.md  event-processing.md  manual-csv-import.md  pool-rules.md  risk-register.md  source-code-layout.md  source-intake-template.md
docs/adr/: 0001-mvp-architecture.md
docs/source-intake/: initial-approval-2026-07-13.md
migrations/: 0001_initial.sql  0002_collection_framework.sql
src/ashare_review/: __init__.py
src/ashare_review/ai/: __init__.py
src/ashare_review/analytics/: __init__.py  pool_scoring.py
src/ashare_review/cli/: __init__.py  collect_36kr.py  generate_pool.py
src/ashare_review/collectors/: __init__.py  calendar.py  contracts.py  http.py  manual_csv.py  resilience.py  runner.py
src/ashare_review/config/: __init__.py  logging.py  settings.py
src/ashare_review/delivery/: __init__.py  email.py
src/ashare_review/domain/: __init__.py  events.py  market.py  pool.py  records.py  workflows.py
src/ashare_review/processors/: __init__.py  news_events.py
src/ashare_review/prompts/: __init__.py
src/ashare_review/reports/: __init__.py  news_brief.py
src/ashare_review/repositories/: __init__.py  database.py  events.py  (+7 more)
tests/: __init__.py
tests/integration/: test_manual_csv_import.py  test_pool_generation.py  test_sqlite_foundation.py
tests/unit/: test_collection_framework.py  test_news_collection_workflow.py  test_news_event_processing.py  test_news_source_adapters.py  test_settings.py
(+11 files in other folders)
