[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-review"
version = "0.1.0"
description = "A-share daily research and review automation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
    "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ashare_review"]
